--- a/WishList/Views/Account/Register.cshtml
+++ b/WishList/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@Model WishList.Models.AccountViewModels.RegisterViewModel;
+﻿@model WishList.Models.AccountViewModels.RegisterViewModel;
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
